--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,218 @@
-/* your styles here */
+/* dropdown list */
+.dropdown {
+  margin: 20px auto;
+  width: 300px;
+  position: relative;
+  -webkit-perspective: 800px;
+          perspective: 800px;
+}
+.dropdown.active .selLabel:after {
+  content: '\25B2';
+}
+.dropdown.active .dropdown-list li:nth-child(1) {
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+.dropdown.active .dropdown-list li:nth-child(2) {
+  -webkit-transform: translateY(200%);
+          transform: translateY(200%);
+}
+.dropdown.active .dropdown-list li:nth-child(3) {
+  -webkit-transform: translateY(300%);
+          transform: translateY(300%);
+}
+.dropdown.active .dropdown-list li:nth-child(4) {
+  -webkit-transform: translateY(400%);
+          transform: translateY(400%);
+}
+.dropdown > span {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  color: #fff;
+  font-size: 18px;
+  letter-spacing: 2px;
+  background: #34495e;
+  display: block;
+  padding: 0 50px 0 30px;
+  position: relative;
+  z-index: 9999;
+  cursor: pointer;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transform-origin: 50% 0%;
+          transform-origin: 50% 0%;
+  -webkit-transition: -webkit-transform 300ms;
+  transition: -webkit-transform 300ms;
+  transition: transform 300ms;
+  transition: transform 300ms, -webkit-transform 300ms;
+  -webkit-backface-visibility: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.dropdown > span:after {
+  content: '\25BC';
+  position: absolute;
+  right: 0px;
+  top: 15%;
+  width: 50px;
+  text-align: center;
+  font-size: 12px;
+  padding: 10px;
+  height: 70%;
+  line-height: 24px;
+  border-left: 1px solid #ddd;
+}
+.dropdown > span:active {
+  -webkit-transform: rotateX(60deg);
+          transform: rotateX(60deg);
+}
+.dropdown > span:active:after {
+  content: '\25B2';
+}
+.dropdown-list {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
+.dropdown-list li {
+  cursor: pointer;
+  display: block;
+  list-style: none;
+  left: 0;
+  opacity: 1;
+  -webkit-transition: -webkit-transform 300ms ease;
+  transition: -webkit-transform 300ms ease;
+  transition: transform 300ms ease;
+  transition: transform 300ms ease, -webkit-transform 300ms ease;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.dropdown-list li:after {
+  background-color: rgba(255, 255, 255, 0.5);
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  transition: opacity 0.5s;
+  opacity: 0;
+}
+.dropdown-list li:hover:after {
+  opacity: 1;
+}
+.dropdown-list li:nth-child(1) {
+  background-color: #102335;
+  z-index: 4;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.dropdown-list li:nth-child(2) {
+  background-color: #0f4363;
+  z-index: 3;
+  -webkit-transform: translateY(3%);
+          transform: translateY(3%);
+}
+.dropdown-list li:nth-child(3) {
+  background-color: #1d80bd;
+  z-index: 2;
+  -webkit-transform: translateY(6%);
+          transform: translateY(6%);
+}
+.dropdown-list li:nth-child(4) {
+  background-color: #43b1e8;
+  z-index: 1;
+  -webkit-transform: translateY(9%);
+          transform: translateY(9%);
+}
+.dropdown-list li span {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  -webkit-backface-visibility: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  width: 100%;
+  font-size: 18px;
+  line-height: 60px;
+  padding: 0 30px;
+  display: block;
+  color: #fff;
+  cursor: pointer;
+  letter-spacing: 2px;
+}
+
+/* OTHER STYLES */
+* {
+  margin: 0;
+  padding: 0;
+}
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+html, body, .container {
+  height: 100vh;
+}
+html {
+  line-height: 1.2;
+}
 body {
-	font-family: "Helvetica neue", arial, sans-serif;
-	background: #333;
-	color: #fff;
-	text-align: center;
+  background-color: #f5f5f5;
+  color: #333;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 16px;
+}
+.container {
+  background: -moz-radial-gradient(center, ellipse cover, rgba(198,245,227,1) 0%, rgba(2,88,112,1) 100%); /* ff3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(198,245,227,1)), color-stop(100%, rgba(2,88,112,1))); /* safari4+,chrome */
+background:-webkit-radial-gradient(center, ellipse cover, rgba(198,245,227,1) 0%, rgba(2,88,112,1) 100%); /* safari5.1+,chrome10+ */
+background: -o-radial-gradient(center, ellipse cover, rgba(198,245,227,1) 0%, rgba(2,88,112,1) 100%); /* opera 11.10+ */
+background: -ms-radial-gradient(center, ellipse cover, rgba(198,245,227,1) 0%, rgba(2,88,112,1) 100%); /* ie10+ */
+background:radial-gradient(ellipse at center, rgba(198,245,227,1) 0%, rgba(2,88,112,1) 100%); /* w3c */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c6f5e3', endColorstr='#025870',GradientType=1 );
+  padding-bottom: 10%;
+}
+.selected-item {
+  margin: 20px 0;
+  text-align: center;
+}
+.selected-item p {
+  font-size: 18px;
+}
+.selected-item p span {
+  font-weight: bold;
+}
+header {
+	padding: 8vh 3vw;
+}
+h1, h1+p {
+	color: #FFFFFF;
+	text-align: center;	
+}
+h1+p {
+	font-size: 22px;
+}
+h1 {
+	font-size: 45px;
+	font-weight: normal;
+}
+@media (min-width: 50em) {
+  h1, h1+p {
+    text-align: left;
+  } 
+  h1+p {
+    font-size: 28px;
+  }
+  h1 {
+    font-size: 63px;
+  }
 }
